2014-01-09  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c src/datafile.h src/plot2d.c:  Only include support for
	"thru" if configured with --enable-backwards-compatibility

2014-01-08  Thomas Bleher <tbleher@gmx.de>

	* config/msvc/Makefile:  Add configuration option for compiling the qt
	terminal on Windows/MSVC.  Note that the terminal itself does not work
	yet on Windows, but this patch makes it easier to work on fixing that.

2014-01-04  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wcommon.h src/win/wgdiplus.cpp|h src/win/wgnuplib.h
	src/win/wgraph.c src/win/resourc.h term/win.trm:  New (optional)
	variant of the windows terminal backend which draws using the GDI+ API
	whenever possible. This is much faster in some cases than the old
	backend which switches between GDI and GDI+ to support antialiasing
	and RGBA colors. Images are drawn using GDI since GDI+ always uses some
	sort of interpolation when scaling images. Enhanced text is currently
	still drawn using GDI. Adjacent polygons of the same color are merged
	in order to avoid "seams" between them caused by antialiasing. See also
	Bug #1096.

	* src/term_api.h src/graphics (plot_image_or_update_axes):  Wrap
	the fallback image output with term->layer() commands using
	TERM_LAYER_BEGIN_IMAGE and TERM_LAYER_END_IMAGE. This can be
	used by terminals to optimize output.

	* src/win/wgraph.c (drawgraph):  Move GDI image drawing code from
	drawgraph() to a new routine draw_image().

	* src/command.c src/fit.c|h src/plot.c|h src/term.c src/win/wgraph.c 
	src/win/winmain.c src/win/wtext.c term/win.trm:  Handle Ctrl-C
	asynchronously on Windows (GUI and console mode). This is done by
	setting ctrlc_flag and testing it in check_for_mouse_event(). Thus,
	scripts etc. can now finally be interrupted by pressing Ctrl-C in
	console mode gnuplot or Ctrl-Break in wgnuplot.

	* src/win/winmain.c (ConsoleGetch):  Remap Shift-Tab key-code in
	console mode, too.
